--- a/index.html
+++ b/index.html
@@ -16,61 +16,42 @@
       },100);
     });
   </script>
-	
+
+  <!--[if lt IE 9]>
+  <script src="dist/html5shiv.js"></script>
+  <![endif]-->
+
+  <!--[if !IE 7]>
+    <style type="text/css">
+      #wrap {display:table;height:100%}
+    </style>
+  <![endif]-->
+  
+  <link rel="stylesheet" type="text/css" href="css/ericMeyerReset.css" />
+  <link rel="stylesheet" type="text/css" href="css/stickyFooter.css" />
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
+  	
 	<style>
   <!--
-  body { background-image:url(img/filmStrip.png);  background-position: right; background-repeat: repeat-y; margin: 0; padding: 0; z-index: 0; font-family: 'Rambla', Helvetica, Arial, sans-serif; font-weight: 400; }
-	
-  a { color: #f0741e; text-decoration: none; }
-  
-	strong, .strong {font-weight: 700;}
-	
-	.logoContainer {width: 200px; float: right; margin-top: 25px; margin-right: 35px;}
-  
-  .contentFrame {float: right; max-width: 605px; min-width: 300px; width: 100%; border: 1px solid #008800;}
-	
-	.contentContainer {
-		margin: 35px 90px 0 30px;
-		border: 1px solid #0066cc;
-		padding: 10px;	
-		min-width: 200px;
-		max-width: 605px;
-	}
-	
-	.content { 
-		height: 400px; 
-		width: 100%;
+
+	@media all and (max-width:850px) {
 		
-		border: 1px solid #990000;
-		background: #999999; 
+		.logoContainer { display: none; }
 		
+		.logoContainer2 {	display: inline; float: left; margin-top: -41px; padding-right: 15px; }
+		#logo2 { width: 80px; padding-left: 3px; }
+		#logoText2 { width: 80px; }
 	}
-  
-  .footerContainer { height: 35px; width: 100%; position: absolute; bottom: 0; z-index: 1; }
 	
-  .footer {background-color: #616161; height: 35px; margin-right: 47px; color: #ffffff; text-align: right; padding: 10px 10px 0 0; font-size: 10pt; }
-
-
-@media all and (max-width:950px) {
-  .logoContainer {
-		display: none;
-  }
-}
-
-@media all and (max-width:420px) {
-  body {
-		background: none;
-  }
-  .contentContainer {
-		margin: 0;
-		border: 1px solid #0066cc;
-		padding: 10px;	
-		min-width: 200px;
-		max-width: 605px;
+	@media all and (max-width:420px) {
+		body {
+			background: none;
+		}
+		.contentContainer { margin: 0; padding: 10px;	min-width: 200px; }
+		.contacts { margin-right: 0; height: 70px; text-align: center; font-size: 12pt; }
+		footer { height: 70px; }
+		.printedContent img { width: 100% }
 	}
-	.footer { margin-right: 0; height: 70px; text-align: center;}
-	.footerContainer { height: 70px; }
-}
 
   -->
   </style>
@@ -78,25 +59,61 @@
 
 <body>
 
-  <div class="contentFrame">
-    <div class="contentContainer">
-      <div class="content">
-        <!--<img src="img/test.png">-->
-      </div>
-    </div>
-  </div>
-  
-  <div class="logoContainer">
-		<img id="logo" src="img/logo.png" style="padding-left: 12px;" />  
-		<br />
-    <img src="img/logoText.png" />
-  </div>
+  <div id="wrap">
+    <div id="main">
+      <div class="contentFrame">
+        <div class="languageSelecta">
+          est / eng / rus
+        </div>
+        <div class="contentContainer">
+          <div class="content">
+            <div class="logoContainer2">
+              <img id="logo2" src="img/logo.png" /><br />
+              <img id="logoText2" src="img/logoText.png" />
+            </div>
+            <div class="menuContainer">
+              <ul class="mainMenu">
+                <li class="page_item"><a href="#">Esileht</a></li>
+                <li class="page_item"><a href="#">Stuudio</a></li>
+                <li class="page_item current_page_parent"><a href="#">Teenused</a></li>
+                <li class="page_item"><a href="#">Õppematerjalid</a></li>
+                <li class="page_item"><a href="#">Videoteek</a></li>
+              </ul>
+              <ul class="subMenu">
+                <li class="page_item"><a href="#">Sünnipäev</a></li>
+                <li class="page_item current_page_item"><a href="#">Töötoad</a></li>
+                <li class="page_item"><a href="#">Koolitus</a></li>
+                <li class="page_item"><a href="#">Välisündmused</a></li>
+                <li class="page_item"><a href="#">SOS Animatsiooniabi</a></li>
+              </ul>
+            </div>
+            
+            <img src="img/demoLike.png" style="float: right; margin-top: 40px;" />
+            <h1>Töötoad</h1>
+              <div class="printedContent">
+                <img src="img/demoImg.png" class="wp-img-62" style="float: right; margin-left: 15px; margin-bottom: 15px;" />
+"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
 
-  <div class="footerContainer">
-    <div class="footer">
+"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+              </div>
+            <img src="img/demoComments.png" style="width: 100%;" />
+          </div>
+        </div>
+      </div>
+      
+      <div class="logoContainer">
+        <img id="logo" src="img/logo.png" />  
+        <br />
+        <img id="logoText" src="img/logoText.png" />
+      </div>
+		</div><!-- main -->
+  </div><!-- wrap -->
+
+  <footer id="footer">
+    <div class="contacts">
       Luise 4 Tallinn [ <a href="#">kaart</a> ]   -  <a href="mailto:info@nukufilmilastestuudio.ee">info@nukufilmilastestuudio.ee</a>  -  56984477
     </div>
-  </div>
+  </footer>
 
 </body>
 </html>
