--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
 <meta charset="UTF-8">
 <title>NukuFilmi LasteStuudio</title>
 <link href='http://fonts.googleapis.com/css?family=Rambla:700,400' rel='stylesheet' type='text/css'>
-	<script src="js/jquery-1.5.1.min.js" type="text/javascript"></script>            
+	<script src="js/jquery-1.8.3.min.js" type="text/javascript"></script>            
   <script src="js/jQueryRotateCompressed.2.1.js" type="text/javascript"></script>    
+  <script src="js/tinyNav/tinynav.min.js" type="text/javascript"></script>    
   <script type="text/javascript">
+	
     $(document).ready(function() {
+			
+			
+			$('html').addClass('js');
+			
+			$(function () {
+				$(".mainMenu").tinyNav({
+					active: 'current_page_item', // String: Set the "active" class
+				});
+			});
+			
       var angle =0;
       setInterval(function(){
           angle+=1;
@@ -15,6 +27,7 @@
          //if(angle==50) { startSwirl();	}
       },100);
     });
+		
   </script>
 
   <!--[if lt IE 9]>
@@ -34,13 +47,15 @@
 	<style>
   <!--
 
-	@media all and (max-width:850px) {
+	@media all and (max-width:1020px) {
 		
-		.logoContainer { display: none; }
+		/*.logoContainer { display: none; } */
 		
-		.logoContainer2 {	display: inline; float: left; margin-top: -41px; padding-right: 15px; }
-		#logo2 { width: 80px; padding-left: 3px; }
-		#logoText2 { width: 80px; }
+		.logoContainer {	float: left; margin-top: -41px; padding-right: 15px; left: 0; position: relative; width: 80px; }
+		#logo { width: 80px; padding-left: 3px; }
+		#logoText { width: 80px; }
+		
+		ul.subMenu { left: 96px; }
 	}
 	
 	@media all and (max-width:420px) {
@@ -51,6 +66,41 @@
 		.contacts { margin-right: 0; height: 70px; text-align: center; font-size: 12pt; }
 		footer { height: 70px; }
 		.printedContent img { width: 100% }
+		
+		.js .tinynav { display: block; width: 100%; }
+		.js ul.mainMenu { display: none; }
+		
+		.languageSelecta { display: none; }
+		
+		h1 { margin-top: 20px; }
+
+		.logoContainer {	 top: 34px; height: 280px;  }
+
+		.demoLike { margin-top: 35px; }	
+	
+	}
+
+	@media all and (max-width:835px) {
+		ul.mainMenu li.page_item a {
+			font-size: 15pt;
+		}
+		ul.subMenu li.page_item a {
+			font-size: 11pt;
+		}
+	}
+
+	@media all and (max-width:750px) {
+
+		.menuContainer { margin-top: 0px; }
+
+		ul.subMenu { left: 0; top: 290px; }
+
+/*		div.logoContainer { display: none; } */
+
+		.logoContainer {	 margin-top: -30px; width: 200px; margin-left: auto; margin-right: auto;  float: none; position: relative; }
+		#logo { width: 200px; padding-left: 3px; margin-left: auto; margin-right: auto; }
+		#logoText { width: 200px; margin-left: auto; margin-right: auto; }
+
 	}
 
   -->
@@ -67,28 +117,28 @@
         </div>
         <div class="contentContainer">
           <div class="content">
-            <div class="logoContainer2">
-              <img id="logo2" src="img/logo.png" /><br />
-              <img id="logoText2" src="img/logoText.png" />
+            <div class="logoContainer">
+              <img id="logo" src="img/logo.png" /><br />
+              <img id="logoText" src="img/logoText.png" />
             </div>
             <div class="menuContainer">
               <ul class="mainMenu">
                 <li class="page_item"><a href="#">Esileht</a></li>
                 <li class="page_item"><a href="#">Stuudio</a></li>
                 <li class="page_item current_page_parent"><a href="#">Teenused</a></li>
-                <li class="page_item"><a href="#">Õppematerjalid</a></li>
-                <li class="page_item"><a href="#">Videoteek</a></li>
-              </ul>
               <ul class="subMenu">
-                <li class="page_item"><a href="#">Sünnipäev</a></li>
+                <li class="page_item"><a href="http://www.neti.ee">Sünnipäev</a></li>
                 <li class="page_item current_page_item"><a href="#">Töötoad</a></li>
                 <li class="page_item"><a href="#">Koolitus</a></li>
                 <li class="page_item"><a href="#">Välisündmused</a></li>
                 <li class="page_item"><a href="#">SOS Animatsiooniabi</a></li>
               </ul>
+                <li class="page_item"><a href="#">Õppematerjalid</a></li>
+                <li class="page_item"><a href="#">Videoteek</a></li>
+              </ul>
             </div>
             
-            <img src="img/demoLike.png" style="float: right; margin-top: 40px;" />
+            <img src="img/demoLike.png" class="demoLike" />
             <h1>Töötoad</h1>
               <div class="printedContent">
                 <img src="img/demoImg.png" class="wp-img-62" style="float: right; margin-left: 15px; margin-bottom: 15px;" />
@@ -99,12 +149,6 @@
             <img src="img/demoComments.png" style="width: 100%;" />
           </div>
         </div>
-      </div>
-      
-      <div class="logoContainer">
-        <img id="logo" src="img/logo.png" />  
-        <br />
-        <img id="logoText" src="img/logoText.png" />
       </div>
 		</div><!-- main -->
   </div><!-- wrap -->
