--- a/index.html
+++ b/index.html
@@ -7,27 +7,9 @@
 	<script src="js/jquery-1.8.3.min.js" type="text/javascript"></script>            
   <script src="js/jQueryRotateCompressed.2.1.js" type="text/javascript"></script>    
   <script src="js/tinyNav/tinynav.min.js" type="text/javascript"></script>    
+  <script src="js/main.js" type="text/javascript"></script>    
+
   <script type="text/javascript">
-	
-    $(document).ready(function() {
-			
-			
-			$('html').addClass('js');
-			
-			$(function () {
-				$(".mainMenu").tinyNav({
-					active: 'current_page_item', // String: Set the "active" class
-				});
-			});
-			
-      var angle =0;
-      setInterval(function(){
-          angle+=1;
-         $("#logo").rotate(angle);
-         //if(angle==50) { startSwirl();	}
-      },100);
-    });
-		
   </script>
 
   <!--[if lt IE 9]>
@@ -43,72 +25,15 @@
   <link rel="stylesheet" type="text/css" href="css/ericMeyerReset.css" />
   <link rel="stylesheet" type="text/css" href="css/stickyFooter.css" />
   <link rel="stylesheet" type="text/css" href="css/main.css" />
+  <link rel="stylesheet" type="text/css" href="css/mediaQueries.css" />
   	
 	<style>
   <!--
-
-	@media all and (max-width:1020px) {
-		
-		/*.logoContainer { display: none; } */
-		
-		.logoContainer {	float: left; margin-top: -41px; padding-right: 15px; left: 0; position: relative; width: 80px; }
-		#logo { width: 80px; padding-left: 3px; }
-		#logoText { width: 80px; }
-		
-		ul.subMenu { left: 96px; }
-	}
-	
-	@media all and (max-width:420px) {
-		body {
-			background: none;
-		}
-		.contentContainer { margin: 0; padding: 10px;	min-width: 200px; }
-		.contacts { margin-right: 0; height: 70px; text-align: center; font-size: 12pt; }
-		footer { height: 70px; }
-		.printedContent img { width: 100% }
-		
-		.js .tinynav { display: block; width: 100%; }
-		.js ul.mainMenu { display: none; }
-		
-		.languageSelecta { display: none; }
-		
-		h1 { margin-top: 20px; }
-
-		.logoContainer {	 top: 34px; height: 280px;  }
-
-		.demoLike { margin-top: 35px; }	
-	
-	}
-
-	@media all and (max-width:835px) {
-		ul.mainMenu li.page_item a {
-			font-size: 15pt;
-		}
-		ul.subMenu li.page_item a {
-			font-size: 11pt;
-		}
-	}
-
-	@media all and (max-width:750px) {
-
-		.menuContainer { margin-top: 0px; }
-
-		ul.subMenu { left: 0; top: 290px; }
-
-/*		div.logoContainer { display: none; } */
-
-		.logoContainer {	 margin-top: -30px; width: 200px; margin-left: auto; margin-right: auto;  float: none; position: relative; }
-		#logo { width: 200px; padding-left: 3px; margin-left: auto; margin-right: auto; }
-		#logoText { width: 200px; margin-left: auto; margin-right: auto; }
-
-	}
-
   -->
   </style>
 </head>
 
 <body>
-
   <div id="wrap">
     <div id="main">
       <div class="contentFrame">
