minor fixes for validation

--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
   <!--[if lt IE 9]>
   <script src="dist/html5shiv.js"></script>
   <![endif]-->
-
   <!--[if !IE 7]>
-    <style type="text/css">
-      #wrap {display:table;height:100%}
-    </style>
-  <![endif]-->
+  <style type="text/css">
+    #wrap {display:table;height:100%}
+  </style>
+<![endif]-->
   <link rel="stylesheet" type="text/css" href="css/ericMeyerReset.css" />
   <link rel="stylesheet" type="text/css" href="css/stickyFooter.css" />
   <link rel="stylesheet" type="text/css" href="css/main.css" />
@@ -38,8 +37,8 @@
         <div class="contentContainer">
           <div class="content">
             <div class="logoContainer">
-              <img id="logo" src="img/logo.png" /><br />
-              <img id="logoText" src="img/logoText.png" />
+              <img id="logo" src="img/logo.png" alt="päike" /><br />
+              <img id="logoText" src="img/logoText.png" alt="NukuFilmi LasteStuudio" />
             </div>
             <div class="menuContainer">
               <ul class="mainMenu">
@@ -57,15 +56,15 @@
                 <li class="page_item"><a href="#">Videoteek</a></li>
               </ul>
             </div>
-            <img src="img/demoLike.png" class="demoLike" />
+            <img src="img/demoLike.png" class="demoLike" alt="demoLike" />
             <h1>Töötoad</h1>
               <div class="printedContent">
-                <img src="img/demoImg.png" class="wp-img-62" style="float: right; margin-left: 15px; margin-bottom: 15px;" />
+                <img src="img/demoImg.png" alt="demoImg" class="wp-img-62 demoImg" />
 "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
 
 "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
               </div>
-            <img src="img/demoComments.png" style="width: 100%;" />
+            <img src="img/demoComments.png" alt="dummyComments" style="width: 100%;" />
           </div>
         </div>
       </div>
